update author
